<resources>
    <string name="app_name">Mundo Glaciar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="koala">Koala</string>
    <string name="nombreApp">Mundo Glaciar</string>
    <string name="descripcionApp">Compra los mejores productos en nuestra tienda</string>
    <string name="nombre_add_edit_categoria">Nombre</string>
    <string name="link_add_edit_categoria">Link Imagen... (http://myimg.com/imagen.jpg)</string>
    <string name="description_add_edit_category">Descripción</string>
    <string name="deleteCategoria">BORRAR</string>
    <string name="editCategoria">EDITAR</string>
    <string name="titulo_Editar_Actividad">Editar Categoria</string>
    <string name="titulo_Add_Actividad">Añadir nueva Categoria</string>
    <string name="addNewCategoryToast">Los datos no son validos, intentalo de nuevo</string>
    <string name="btnGaleria">Añadir desde Galeria...</string>
    <string name="editarCategoria">Editar</string>
    <string name="add_edit_esqui_marca">Marca</string>
    <string name="add_edit_esqui_modeloEsqui">Modelo</string>
    <string name="dialog_borrar">Borrar</string>
    <string name="titulo_Editar_Esqui">Editar Esqui</string>
    <string name="titulo_Add_Esqui">Añadir nuevo modelo de Esqui</string>
    <string name="add_edit_esqui_precio">Precio</string>
    <string name="initialData_FreeStyle_Description">Para los amantes del freeStyle</string>
    <string name="initialData_FreeRide_Description">Para los amantes del puro esqui</string>
    <string name="createChooser_Permisos_Galeria">Seleccione la aplicación</string>
    <string name="denegado_Permisos">Por favor, acepta los permisos</string>
    <string name="titleNotification">Mundo Glaciar</string>
    <string name="messageNotification">Se ha creado una nueva categoria!</string>
    <string name="olderVersion_Permission">No tienes los permisos</string>
    <string name="dialogBorrarEsquiTitle">Borrar Modelo de Esqui</string>
    <string name="dialogBorrarEsquiMessage">Estás seguro que quieres borrar</string>
    <string name="dialogBorrarEsquiToast">Se ha borrado con exito</string>
    <string name="dialogBorrarCategoria">Borrar Categoria</string>
    <string name="dialogBorrarCategoriaMEssage">Estás seguro que quieres borrar</string>
    <string name="dialogBorrarCategoriaToast">Se ha borrado con exito</string>
</resources>