<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddEditEsquiActivity"
    >
    <TextView
        android:id="@+id/textViewTitleEsqui"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/open_sans_bold"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30dp"
        />
    <ImageView
        android:id="@+id/imageViewPreviewEsqui"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/editTextMarcaEsqui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_edit_esqui_marca"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editTextModeloEsqui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextMarcaEsqui"
                    android:layout_marginTop="25dp"
                    android:hint="@string/add_edit_esqui_modeloEsqui"
                    android:inputType="textPersonName" />


                <EditText
                    android:id="@+id/editTextEsquiLink"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editTextModeloEsqui"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="25dp"
                    android:hint="@string/link_add_edit_categoria"
                    android:inputType="textWebEditText" />

                <Button
                    android:id="@+id/buttonPreviewEsqui"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignTop="@id/editTextEsquiLink"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:background="@android:drawable/ic_menu_view"
                    android:focusable="true"
                    android:gravity="right" />

                <EditText
                    android:id="@+id/editTextEsquiDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextEsquiLink"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="25dp"
                    android:hint="@string/description_add_edit_category"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:maxLines="2" />


                <Button
                    android:id="@+id/btnGaleriaEsqui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextEsquiDescription"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/btnGaleria"
                    android:elevation="20dp"/>
                <EditText
                    android:id="@+id/editTextEsquiPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextEsquiDescription"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:hint="@string/add_edit_esqui_precio"
                    android:inputType="number"
                    />

                <RatingBar
                    android:id="@+id/ratingBarEsqui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editTextEsquiDescription"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="85dp" />


            </RelativeLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FABSaveEsqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_save"
            app:backgroundTint="@color/colorAccent"
            app:borderWidth="0dp" />

    </FrameLayout>


</LinearLayout>